# Shell-Eco-marathon-APC-Competition

./: README.md  carla_config.yaml
custom_msg/: CMakeLists.txt  package.xml
custom_msg/msg/: Dimensions.msg  ObjectInfo.msg  Perception.msg  TrafficLightsInfo.msg
shell_simulation/: CMakeLists.txt  package.xml  setup.py
shell_simulation/data/: centroids.csv  traffic_lights_info.csv  trajectory.csv
shell_simulation/launch/: path_tracker_controller.launch  shell_simulation.launch  test.launch
shell_simulation/resource/: shell_simulation
shell_simulation/scripts/: behavior_planner_node.py  controller_node.py  lidar_node.py  logger_node.py  path_tracker_node.py  planner_perception_node.py
shell_simulation/src/shell_simulation/: __init__.py  controller.py  kalman_filter.py  lidar_utilities.py
